test/functions/export/export-where.good
export-where.chpl:5: error: exported functions cannot have where clauses
